<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="8dp">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content"
		android:text="@string/setting_title"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="16dp"
		android:background="#C4C4C4"/>

	<LinearLayout
		android:background="@drawable/nor_lay"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="4dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/setting_search_core"
			android:textColor="#FF000000"
			android:textSize="16sp"
			android:layout_gravity="center"
			android:layout_weight="2.0"/>

		<Spinner
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="gravity"
			android:id="@+id/settingsSpinner1"/>

	</LinearLayout>

	<LinearLayout
		android:background="@drawable/nor_lay"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="4dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:id="@+id/settingsLinearLayout1">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/setting_save_path"
			android:textColor="#FF000000"
			android:textSize="16sp"
			android:layout_gravity="center"
			android:layout_weight="2.0"/>

		<ImageView
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:src="@drawable/ic_right"/>

	</LinearLayout>

	<LinearLayout
		android:background="@drawable/nor_lay"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="4dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="16dp">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/setting_quality"
			android:textColor="#FF000000"
			android:textSize="16sp"
			android:layout_gravity="center"
			android:layout_weight="2.0"/>

		<Spinner
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="gravity"
			android:id="@+id/settingsSpinner2"/>

	</LinearLayout>

</LinearLayout>

