<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<ImageView
		android:id="@+id/playerImageView"
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:layout_margin="16dp"
		android:scaleType="fitXY"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:textColor="#FF000000"
		android:gravity="center_horizontal"
		android:textStyle="bold"
		android:id="@+id/playerTextView"/>

	<SeekBar
		android:id="@+id/playerSeekBar"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_marginTop="32dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:orientation="horizontal"
		android:padding="4dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="00"
			android:textSize="14sp"
			android:textColor="#FF000000"
			android:layout_gravity="center"
			android:id="@+id/playerTextView2"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="/"
			android:gravity="center_vertical"
			android:layout_gravity="center"
			android:textSize="14sp"
			android:textColor="#FF000000"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="14sp"
			android:textColor="#FF000000"
			android:layout_gravity="center"
			android:id="@+id/playerTextView3"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="8dp"
		android:padding="8dp"
		android:background="@drawable/nor_lay"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp">

		<Button
			android:onClick="playOrPause"
			android:background="@drawable/nor_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1.0"
			android:text="@string/pause_or_play"
			android:textSize="14sp"
			android:textColor="#FF000000"/>

		<Button
			android:onClick="stopPlaying"
			android:background="@drawable/nor_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_weight="1.0"
			android:layout_gravity="center"
			android:text="@string/stops"
			android:textSize="14sp"
			android:textColor="#FF000000"/>

	</LinearLayout>

	<LinearLayout
		android:background="@drawable/nor_lay"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="16dp"
		android:padding="8dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/always_plays"
			android:textSize="14sp"
			android:textColor="#FF000000"
			android:layout_weight="2.0"/>

		<Switch
            android:id="@+id/playerSwitch"
            android:layout_gravity="center"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"/>

	</LinearLayout>
</LinearLayout>
